# ddsp-piano

./: .gitignore  README.md  evaluate_model.py  preprocess_maestro.py  pyproject.toml  quick_training.py  synthesize_from_csv.py  synthesize_midi_file.py  train_ddsp_piano.sh  train_single_phase.py  training_single_phase.py
assets/: tracks_listening_test.csv
ddsp_piano/: __init__.py  data_pipeline.py  default_model.py  io_utils.py  jaes_exp_tanh.py  jaes_model.py  jaes_no_harm_norm.py  jaes_relu.py  jaes_surrogate.py
ddsp_piano/configs/: ENSTDkCl-32kHz.gin  ENSTDkCl-8kHz.gin  dafx22-24kHz.gin  dafx22.gin  default_24kHz.gin  experimental_32kHz.gin  experimental_8kHz.gin  experimental_multi_instruments.gin  gin_test.py  hires_mono_noise.gin  maestro-v2-regularized.gin  maestro-v2.gin  maestro_v2.gin  multi_instruments.gin  noisebandnet.gin  single_piano.gin  surrogate.gin
ddsp_piano/data_processing/: data_pipeline.py  midi_encoders.py
ddsp_piano/model_weights/dafx22/: checkpoint  ckpt-0.data-00000-of-00001
ddsp_piano/model_weights/default_dafx22/: ckpt-0.index
ddsp_piano/model_weights/v2/: checkpoint  ckpt-225000.index
ddsp_piano/models/: default_model.py  piano_model.py
ddsp_piano/modules/: __init__.py  fdn_reverb.py  filtered_noise_synth.py  inharm_synth.py  losses.py  noisebandnet_synth.py  piano_model.py  polyphonic_dag.py  sub_modules.py  surrogate_synth.py  sustained_surrogate_synth.py
ddsp_piano/utils/: io_utils.py  midi_encoders.py  summaries.py
