[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddsp_piano_lrenault"
version = "0.0.1"
authors = [
  { name="Lenny Renault", email="renault@ircam.fr" },
]
description = "Piano synthesizer with DDSP"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"